asgn4/src/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_unless
    BLOCK_END
    KEYWORD___ENCODING__
    BITANDEQUAL
    SQUOTES
    KEYWORD_END
    KEYWORD_self
    KEYWORD_when
    MINUSEQUAL
    KEYWORD_nil
    OR
    DIVEQUAL
    KEYWORD_or
    IFF
    LOGICALANDEQUAL
    KEYWORD_retry
    DOUBLESTAR
    KEYWORD_undef
    COLON
    SIGIL_DOLLAR
    DOUBLE_COLON
    DOUBLESTAREQUAL
    KEYWORD_false
    KEYWORD_definedQ
    SHIFTLEQUAL
    AND
    NOT
    KEYWORD_not
    KEYWORD_yield
    KEYWORD_ensure
    QUESTION_MARK
    MODEQUAL
    QUESTIONCOLON
    KEYWORD_true
    LOGICALOREQUAL
    KEYWORD___END__
    PLUSEQUAL
    KEYWORD_super
    KEYWORD_alias
    MULTIPLYEQUAL
    SHIFTREQUAL
    KEYWORD___LINE__
    KEYWORD_BEGIN
    BLOCK_BEGIN
    DQUOTES
    TRIPLEEQUAL
    PIPEEQUAL
    KEYWORD_and
    KEYWORD___FILE__
    KEYWORD_rescue
    KEYWORD_module
    DOLLAR
    BACK_SLASH
    KEYWORD_case
    BITXOREQUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> top_top_compstmt
Rule 2     top_top_compstmt -> statements opt_terms
Rule 3     statements -> statement
Rule 4     statements -> statements terms statement
Rule 5     statement -> top_compstmt
Rule 6     statement -> func_defn
Rule 7     statement -> class_defn
Rule 8     statement -> VARIABLES DOT VARIABLES OPEN_PAREN arguments CLOSE_PAREN
Rule 9     statement -> VARIABLES DOT VARIABLES OPEN_PAREN CLOSE_PAREN
Rule 10    statement -> VARIABLES DOT VARIABLES arguments
Rule 11    statement -> CONSTANTS DOT KEYWORD_new OPEN_PAREN arguments CLOSE_PAREN
Rule 12    statement -> CONSTANTS DOT KEYWORD_new OPEN_PAREN CLOSE_PAREN
Rule 13    statement -> CONSTANTS DOT KEYWORD_new arguments
Rule 14    func_defn -> KEYWORD_def fname OPEN_PAREN arguments CLOSE_PAREN func_stmts opt_terms KEYWORD_end
Rule 15    func_defn -> KEYWORD_def fname OPEN_PAREN CLOSE_PAREN func_stmts opt_terms KEYWORD_end
Rule 16    func_defn -> KEYWORD_def fname arguments func_stmts opt_terms KEYWORD_end
Rule 17    class_defn -> KEYWORD_class CONSTANTS newline class_stmts opt_terms KEYWORD_end
Rule 18    class_stmts -> class_stmt
Rule 19    class_stmts -> class_stmts terms class_stmt
Rule 20    class_stmts -> none
Rule 21    class_stmt -> class_mlhs EQUAL class_mrhs
Rule 22    class_stmt -> class_func
Rule 23    class_mrhs -> literal
Rule 24    literal -> INT_CONSTANTS
Rule 25    literal -> FLOAT_CONSTANTS
Rule 26    literal -> STRING_CONSTANTS
Rule 27    literal -> BOOLEAN_CONSTANTS
Rule 28    literal -> CHAR_CONSTANTS
Rule 29    literal -> SIGIL_AT
Rule 30    literal -> SIGIL_DOUBLE_AT
Rule 31    class_mlhs -> class_mlhs terms SIGIL_DOUBLE_AT
Rule 32    class_mlhs -> SIGIL_DOUBLE_AT
Rule 33    class_func -> KEYWORD_def fname OPEN_PAREN arguments CLOSE_PAREN class_method_stmts opt_terms KEYWORD_end
Rule 34    class_func -> KEYWORD_def fname arguments class_method_stmts opt_terms KEYWORD_end
Rule 35    class_func -> KEYWORD_def fname OPEN_PAREN CLOSE_PAREN class_method_stmts opt_terms KEYWORD_end
Rule 36    class_method_stmts -> class_method_stmt
Rule 37    class_method_stmts -> class_method_stmts terms class_method_stmt
Rule 38    class_method_stmts -> none
Rule 39    class_method_stmt -> class_method_mlhs EQUAL class_method_mrhs
Rule 40    class_method_stmt -> KEYWORD_return class_method_ret_arg
Rule 41    class_method_stmt -> puts_stmt
Rule 42    class_method_mlhs -> class_method_mlhs terms SIGIL_AT
Rule 43    class_method_mlhs -> SIGIL_AT
Rule 44    class_method_mlhs -> SIGIL_DOUBLE_AT
Rule 45    class_method_mrhs -> literal
Rule 46    class_method_mrhs -> VARIABLES
Rule 47    class_method_ret_arg -> class_method_arg_expr
Rule 48    class_method_ret_arg -> literal
Rule 49    class_method_ret_arg -> class_method_ret_arg COMMA class_method_arg_expr
Rule 50    class_method_ret_arg -> class_method_ret_arg COMMA literal
Rule 51    class_method_arg_expr -> SIGIL_AT EQUAL literal
Rule 52    class_method_arg_expr -> SIGIL_DOUBLE_AT EQUAL literal
Rule 53    fname -> VARIABLES
Rule 54    fname -> CONSTANTS
Rule 55    arguments -> arguments COMMA VARIABLES
Rule 56    arguments -> arguments COMMA CONSTANTS
Rule 57    arguments -> arguments COMMA func_arg_expr
Rule 58    arguments -> VARIABLES
Rule 59    arguments -> CONSTANTS
Rule 60    arguments -> func_arg_expr
Rule 61    arguments -> newline
Rule 62    func_arg_expr -> VARIABLES EQUAL primary
Rule 63    func_arg_expr -> CONSTANTS EQUAL primary
Rule 64    top_compstmt -> top_stmts
Rule 65    top_stmts -> top_stmt
Rule 66    top_stmt -> stmt
Rule 67    top_stmt -> KEYWORD_if expr3 opt_then gen_stmts opt_terms elsif_tail opt_else_stmt KEYWORD_end
Rule 68    top_stmt -> KEYWORD_while expr3 opt_do gen_stmts opt_terms KEYWORD_end
Rule 69    top_stmt -> top_stmt KEYWORD_while expr3
Rule 70    top_stmt -> KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_while expr3
Rule 71    top_stmt -> top_stmt KEYWORD_until expr3
Rule 72    top_stmt -> KEYWORD_until expr3 opt_do gen_stmts opt_terms KEYWORD_end
Rule 73    top_stmt -> KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_until expr3
Rule 74    top_stmt -> KEYWORD_for OPEN_PAREN multi_var CLOSE_PAREN KEYWORD_in for_range opt_do gen_stmts opt_terms KEYWORD_end
Rule 75    top_stmt -> KEYWORD_for multi_var KEYWORD_in for_range opt_do gen_stmts opt_terms KEYWORD_end
Rule 76    gen_stmts -> top_stmt
Rule 77    gen_stmts -> gen_stmts terms top_stmt
Rule 78    gen_stmts -> none
Rule 79    stmt -> expr
Rule 80    stmt -> expr1
Rule 81    stmt -> puts_stmt
Rule 82    stmt -> loop_stmt
Rule 83    stmt -> exit_stmt
Rule 84    stmt -> func_call_stmt
Rule 85    func_call_stmt -> fname OPEN_PAREN func_ret_arg CLOSE_PAREN
Rule 86    func_call_stmt -> fname func_ret_arg
Rule 87    func_call_stmt -> MLHS EQUAL fname OPEN_PAREN func_ret_arg CLOSE_PAREN
Rule 88    func_call_stmt -> MLHS EQUAL fname func_ret_arg
Rule 89    loop_stmt -> KEYWORD_break
Rule 90    loop_stmt -> KEYWORD_next
Rule 91    loop_stmt -> KEYWORD_redo
Rule 92    exit_stmt -> KEYWORD_exit
Rule 93    puts_stmt -> KEYWORD_puts mrhs
Rule 94    puts_stmt -> KEYWORD_puts expr
Rule 95    func_stmts -> func_stmt
Rule 96    func_stmts -> func_stmts terms func_stmt
Rule 97    func_stmts -> none
Rule 98    func_stmt -> top_stmt
Rule 99    func_stmt -> KEYWORD_return func_ret_arg
Rule 100   func_ret_arg -> func_arg_expr
Rule 101   func_ret_arg -> primary
Rule 102   func_ret_arg -> func_ret_arg COMMA func_arg_expr
Rule 103   func_ret_arg -> func_ret_arg COMMA primary
Rule 104   opt_else_stmt -> KEYWORD_else gen_stmts opt_terms
Rule 105   opt_else_stmt -> none
Rule 106   elsif_tail -> none
Rule 107   elsif_tail -> KEYWORD_elsif expr3 opt_then gen_stmts opt_terms elsif_tail
Rule 108   opt_then -> KEYWORD_then
Rule 109   opt_then -> newline
Rule 110   opt_do -> KEYWORD_do
Rule 111   opt_do -> newline
Rule 112   multi_var -> VARIABLES
Rule 113   multi_var -> CONSTANTS
Rule 114   multi_var -> array
Rule 115   multi_var -> multi_var COMMA VARIABLES
Rule 116   multi_var -> multi_var COMMA CONSTANTS
Rule 117   for_range -> OPEN_PAREN INT_CONSTANTS DOUBLEDOT INT_CONSTANTS CLOSE_PAREN
Rule 118   for_range -> INT_CONSTANTS DOUBLEDOT INT_CONSTANTS
Rule 119   for_range -> OPEN_PAREN INT_CONSTANTS TRIPLEDOT INT_CONSTANTS CLOSE_PAREN
Rule 120   for_range -> INT_CONSTANTS TRIPLEDOT INT_CONSTANTS
Rule 121   for_range -> VARIABLES
Rule 122   for_range -> array
Rule 123   for_range -> CONSTANTS
Rule 124   expr -> MLHS EQUAL MRHS
Rule 125   MLHS -> mlhs
Rule 126   MLHS -> MLHS COMMA mlhs
Rule 127   MRHS -> mrhs
Rule 128   MRHS -> MRHS COMMA mrhs
Rule 129   mlhs -> VARIABLES
Rule 130   mlhs -> CONSTANTS
Rule 131   mlhs -> array
Rule 132   mrhs -> expr1
Rule 133   mrhs -> str_expr
Rule 134   mrhs -> KEYWORD_gets
Rule 135   mrhs -> OPEN_BRACKET CLOSE_BRACKET
Rule 136   mrhs -> VARIABLES DOT VARIABLES OPEN_PAREN arguments CLOSE_PAREN
Rule 137   mrhs -> VARIABLES DOT VARIABLES OPEN_PAREN CLOSE_PAREN
Rule 138   mrhs -> VARIABLES DOT VARIABLES
Rule 139   mrhs -> CONSTANTS DOT KEYWORD_new OPEN_PAREN arguments CLOSE_PAREN
Rule 140   mrhs -> CONSTANTS DOT KEYWORD_new
Rule 141   mrhs -> CONSTANTS DOT KEYWORD_new OPEN_PAREN CLOSE_PAREN
Rule 142   str_expr -> STRING_CONSTANTS
Rule 143   primary -> INT_CONSTANTS
Rule 144   primary -> FLOAT_CONSTANTS
Rule 145   primary -> STRING_CONSTANTS
Rule 146   primary -> CHAR_CONSTANTS
Rule 147   primary -> BOOLEAN_CONSTANTS
Rule 148   primary -> CONSTANTS
Rule 149   primary -> VARIABLES
Rule 150   primary -> array
Rule 151   expr1 -> expr3
Rule 152   expr3 -> expr3 LOGICALOR expr4
Rule 153   expr3 -> expr4
Rule 154   expr4 -> expr4 LOGICALAND expr5
Rule 155   expr4 -> expr5
Rule 156   expr5 -> expr6 DOUBLEEQUAL expr6
Rule 157   expr5 -> expr6 NOTEQUAL expr6
Rule 158   expr5 -> expr6
Rule 159   expr6 -> expr7 LESSEQUAL expr7
Rule 160   expr6 -> expr7 LESS expr7
Rule 161   expr6 -> expr7 GREATER expr7
Rule 162   expr6 -> expr7 GREATEREQUAL expr7
Rule 163   expr6 -> expr7
Rule 164   expr6 -> BOOLEAN_CONSTANTS
Rule 165   expr7 -> expr7 BITXOR expr8
Rule 166   expr7 -> expr7 PIPE expr8
Rule 167   expr7 -> expr8
Rule 168   expr8 -> expr8 BITAND expr9
Rule 169   expr8 -> expr9
Rule 170   expr9 -> expr9 SHIFTL expr10
Rule 171   expr9 -> expr9 SHIFTR expr10
Rule 172   expr9 -> expr10
Rule 173   expr10 -> expr10 PLUS expr11
Rule 174   expr10 -> expr10 MINUS expr11
Rule 175   expr10 -> expr11
Rule 176   expr11 -> expr11 MULTIPLY expr13
Rule 177   expr11 -> expr11 DIV expr13
Rule 178   expr11 -> expr11 MOD expr13
Rule 179   expr11 -> expr13
Rule 180   expr13 -> OPEN_PAREN expr1 CLOSE_PAREN
Rule 181   expr13 -> uexpr INT_CONSTANTS
Rule 182   expr13 -> uexpr FLOAT_CONSTANTS
Rule 183   expr13 -> CONSTANTS
Rule 184   expr13 -> VARIABLES
Rule 185   expr13 -> array
Rule 186   array -> VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
Rule 187   uexpr -> none
Rule 188   uexpr -> PLUS
Rule 189   uexpr -> MINUS
Rule 190   uexpr -> BITNOT
Rule 191   uexpr -> BITCOMP
Rule 192   opt_terms -> none
Rule 193   opt_terms -> terms
Rule 194   terms -> term
Rule 195   terms -> terms term
Rule 196   term -> DELIM
Rule 197   term -> newline
Rule 198   none -> <empty>

Terminals, with rules where they appear

AND                  : 
BACK_SLASH           : 
BITAND               : 168
BITANDEQUAL          : 
BITCOMP              : 191
BITNOT               : 190
BITXOR               : 165
BITXOREQUAL          : 
BLOCK_BEGIN          : 
BLOCK_END            : 
BOOLEAN_CONSTANTS    : 27 147 164
CHAR_CONSTANTS       : 28 146
CLOSE_BRACKET        : 135 186
CLOSE_PAREN          : 8 9 11 12 14 15 33 35 74 85 87 117 119 136 137 139 141 180
COLON                : 
COMMA                : 49 50 55 56 57 102 103 115 116 126 128
CONSTANTS            : 11 12 13 17 54 56 59 63 113 116 123 130 139 140 141 148 183
DELIM                : 196
DIV                  : 177
DIVEQUAL             : 
DOLLAR               : 
DOT                  : 8 9 10 11 12 13 136 137 138 139 140 141
DOUBLEDOT            : 117 118
DOUBLEEQUAL          : 156
DOUBLESTAR           : 
DOUBLESTAREQUAL      : 
DOUBLE_COLON         : 
DQUOTES              : 
EQUAL                : 21 39 51 52 62 63 87 88 124
FLOAT_CONSTANTS      : 25 144 182
GREATER              : 161
GREATEREQUAL         : 162
IFF                  : 
INT_CONSTANTS        : 24 117 117 118 118 119 119 120 120 143 181
KEYWORD_BEGIN        : 
KEYWORD_END          : 
KEYWORD___ENCODING__ : 
KEYWORD___END__      : 
KEYWORD___FILE__     : 
KEYWORD___LINE__     : 
KEYWORD_alias        : 
KEYWORD_and          : 
KEYWORD_begin        : 70 73
KEYWORD_break        : 89
KEYWORD_case         : 
KEYWORD_class        : 17
KEYWORD_def          : 14 15 16 33 34 35
KEYWORD_definedQ     : 
KEYWORD_do           : 110
KEYWORD_else         : 104
KEYWORD_elsif        : 107
KEYWORD_end          : 14 15 16 17 33 34 35 67 68 70 72 73 74 75
KEYWORD_ensure       : 
KEYWORD_exit         : 92
KEYWORD_false        : 
KEYWORD_for          : 74 75
KEYWORD_gets         : 134
KEYWORD_if           : 67
KEYWORD_in           : 74 75
KEYWORD_module       : 
KEYWORD_new          : 11 12 13 139 140 141
KEYWORD_next         : 90
KEYWORD_nil          : 
KEYWORD_not          : 
KEYWORD_or           : 
KEYWORD_puts         : 93 94
KEYWORD_redo         : 91
KEYWORD_rescue       : 
KEYWORD_retry        : 
KEYWORD_return       : 40 99
KEYWORD_self         : 
KEYWORD_super        : 
KEYWORD_then         : 108
KEYWORD_true         : 
KEYWORD_undef        : 
KEYWORD_unless       : 
KEYWORD_until        : 71 72 73
KEYWORD_when         : 
KEYWORD_while        : 68 69 70
KEYWORD_yield        : 
LESS                 : 160
LESSEQUAL            : 159
LOGICALAND           : 154
LOGICALANDEQUAL      : 
LOGICALOR            : 152
LOGICALOREQUAL       : 
MINUS                : 174 189
MINUSEQUAL           : 
MOD                  : 178
MODEQUAL             : 
MULTIPLY             : 176
MULTIPLYEQUAL        : 
NOT                  : 
NOTEQUAL             : 157
OPEN_BRACKET         : 135 186
OPEN_PAREN           : 8 9 11 12 14 15 33 35 74 85 87 117 119 136 137 139 141 180
OR                   : 
PIPE                 : 166
PIPEEQUAL            : 
PLUS                 : 173 188
PLUSEQUAL            : 
QUESTIONCOLON        : 
QUESTION_MARK        : 
SHIFTL               : 170
SHIFTLEQUAL          : 
SHIFTR               : 171
SHIFTREQUAL          : 
SIGIL_AT             : 29 42 43 51
SIGIL_DOLLAR         : 
SIGIL_DOUBLE_AT      : 30 31 32 44 52
SQUOTES              : 
STRING_CONSTANTS     : 26 142 145
TRIPLEDOT            : 119 120
TRIPLEEQUAL          : 
VARIABLES            : 8 8 9 9 10 10 46 53 55 58 62 112 115 121 129 136 136 137 137 138 138 149 184 186
error                : 
newline              : 17 61 109 111 197

Nonterminals, with rules where they appear

MLHS                 : 87 88 124 126
MRHS                 : 124 128
arguments            : 8 10 11 13 14 16 33 34 55 56 57 136 139
array                : 114 122 131 150 185
class_defn           : 7
class_func           : 22
class_method_arg_expr : 47 49
class_method_mlhs    : 39 42
class_method_mrhs    : 39
class_method_ret_arg : 40 49 50
class_method_stmt    : 36 37
class_method_stmts   : 33 34 35 37
class_mlhs           : 21 31
class_mrhs           : 21
class_stmt           : 18 19
class_stmts          : 17 19
elsif_tail           : 67 107
exit_stmt            : 83
expr                 : 79 94
expr1                : 80 132 180
expr10               : 170 171 172 173 174
expr11               : 173 174 175 176 177 178
expr13               : 176 177 178 179
expr3                : 67 68 69 70 71 72 73 107 151 152
expr4                : 152 153 154
expr5                : 154 155
expr6                : 156 156 157 157 158
expr7                : 159 159 160 160 161 161 162 162 163 165 166 186
expr8                : 165 166 167 168
expr9                : 168 169 170 171
fname                : 14 15 16 33 34 35 85 86 87 88
for_range            : 74 75
func_arg_expr        : 57 60 100 102
func_call_stmt       : 84
func_defn            : 6
func_ret_arg         : 85 86 87 88 99 102 103
func_stmt            : 95 96
func_stmts           : 14 15 16 96
gen_stmts            : 67 68 70 72 73 74 75 77 104 107
literal              : 23 45 48 50 51 52
loop_stmt            : 82
mlhs                 : 125 126
mrhs                 : 93 127 128
multi_var            : 74 75 115 116
none                 : 20 38 78 97 105 106 187 192
opt_do               : 68 72 74 75
opt_else_stmt        : 67
opt_terms            : 2 14 15 16 17 33 34 35 67 68 70 72 73 74 75 104 107
opt_then             : 67 107
primary              : 62 63 101 103
program              : 0
puts_stmt            : 41 81
statement            : 3 4
statements           : 2 4
stmt                 : 66
str_expr             : 133
term                 : 194 195
terms                : 4 19 31 37 42 77 96 193 195
top_compstmt         : 5
top_stmt             : 65 69 71 76 77 98
top_stmts            : 64
top_top_compstmt     : 1
uexpr                : 181 182

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . top_top_compstmt
    (2) top_top_compstmt -> . statements opt_terms
    (3) statements -> . statement
    (4) statements -> . statements terms statement
    (5) statement -> . top_compstmt
    (6) statement -> . func_defn
    (7) statement -> . class_defn
    (8) statement -> . VARIABLES DOT VARIABLES OPEN_PAREN arguments CLOSE_PAREN
    (9) statement -> . VARIABLES DOT VARIABLES OPEN_PAREN CLOSE_PAREN
    (10) statement -> . VARIABLES DOT VARIABLES arguments
    (11) statement -> . CONSTANTS DOT KEYWORD_new OPEN_PAREN arguments CLOSE_PAREN
    (12) statement -> . CONSTANTS DOT KEYWORD_new OPEN_PAREN CLOSE_PAREN
    (13) statement -> . CONSTANTS DOT KEYWORD_new arguments
    (64) top_compstmt -> . top_stmts
    (14) func_defn -> . KEYWORD_def fname OPEN_PAREN arguments CLOSE_PAREN func_stmts opt_terms KEYWORD_end
    (15) func_defn -> . KEYWORD_def fname OPEN_PAREN CLOSE_PAREN func_stmts opt_terms KEYWORD_end
    (16) func_defn -> . KEYWORD_def fname arguments func_stmts opt_terms KEYWORD_end
    (17) class_defn -> . KEYWORD_class CONSTANTS newline class_stmts opt_terms KEYWORD_end
    (65) top_stmts -> . top_stmt
    (66) top_stmt -> . stmt
    (67) top_stmt -> . KEYWORD_if expr3 opt_then gen_stmts opt_terms elsif_tail opt_else_stmt KEYWORD_end
    (68) top_stmt -> . KEYWORD_while expr3 opt_do gen_stmts opt_terms KEYWORD_end
    (69) top_stmt -> . top_stmt KEYWORD_while expr3
    (70) top_stmt -> . KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_while expr3
    (71) top_stmt -> . top_stmt KEYWORD_until expr3
    (72) top_stmt -> . KEYWORD_until expr3 opt_do gen_stmts opt_terms KEYWORD_end
    (73) top_stmt -> . KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_until expr3
    (74) top_stmt -> . KEYWORD_for OPEN_PAREN multi_var CLOSE_PAREN KEYWORD_in for_range opt_do gen_stmts opt_terms KEYWORD_end
    (75) top_stmt -> . KEYWORD_for multi_var KEYWORD_in for_range opt_do gen_stmts opt_terms KEYWORD_end
    (79) stmt -> . expr
    (80) stmt -> . expr1
    (81) stmt -> . puts_stmt
    (82) stmt -> . loop_stmt
    (83) stmt -> . exit_stmt
    (84) stmt -> . func_call_stmt
    (124) expr -> . MLHS EQUAL MRHS
    (151) expr1 -> . expr3
    (93) puts_stmt -> . KEYWORD_puts mrhs
    (94) puts_stmt -> . KEYWORD_puts expr
    (89) loop_stmt -> . KEYWORD_break
    (90) loop_stmt -> . KEYWORD_next
    (91) loop_stmt -> . KEYWORD_redo
    (92) exit_stmt -> . KEYWORD_exit
    (85) func_call_stmt -> . fname OPEN_PAREN func_ret_arg CLOSE_PAREN
    (86) func_call_stmt -> . fname func_ret_arg
    (87) func_call_stmt -> . MLHS EQUAL fname OPEN_PAREN func_ret_arg CLOSE_PAREN
    (88) func_call_stmt -> . MLHS EQUAL fname func_ret_arg
    (125) MLHS -> . mlhs
    (126) MLHS -> . MLHS COMMA mlhs
    (152) expr3 -> . expr3 LOGICALOR expr4
    (153) expr3 -> . expr4
    (53) fname -> . VARIABLES
    (54) fname -> . CONSTANTS
    (129) mlhs -> . VARIABLES
    (130) mlhs -> . CONSTANTS
    (131) mlhs -> . array
    (154) expr4 -> . expr4 LOGICALAND expr5
    (155) expr4 -> . expr5
    (186) array -> . VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
    (156) expr5 -> . expr6 DOUBLEEQUAL expr6
    (157) expr5 -> . expr6 NOTEQUAL expr6
    (158) expr5 -> . expr6
    (159) expr6 -> . expr7 LESSEQUAL expr7
    (160) expr6 -> . expr7 LESS expr7
    (161) expr6 -> . expr7 GREATER expr7
    (162) expr6 -> . expr7 GREATEREQUAL expr7
    (163) expr6 -> . expr7
    (164) expr6 -> . BOOLEAN_CONSTANTS
    (165) expr7 -> . expr7 BITXOR expr8
    (166) expr7 -> . expr7 PIPE expr8
    (167) expr7 -> . expr8
    (168) expr8 -> . expr8 BITAND expr9
    (169) expr8 -> . expr9
    (170) expr9 -> . expr9 SHIFTL expr10
    (171) expr9 -> . expr9 SHIFTR expr10
    (172) expr9 -> . expr10
    (173) expr10 -> . expr10 PLUS expr11
    (174) expr10 -> . expr10 MINUS expr11
    (175) expr10 -> . expr11
    (176) expr11 -> . expr11 MULTIPLY expr13
    (177) expr11 -> . expr11 DIV expr13
    (178) expr11 -> . expr11 MOD expr13
    (179) expr11 -> . expr13
    (180) expr13 -> . OPEN_PAREN expr1 CLOSE_PAREN
    (181) expr13 -> . uexpr INT_CONSTANTS
    (182) expr13 -> . uexpr FLOAT_CONSTANTS
    (183) expr13 -> . CONSTANTS
    (184) expr13 -> . VARIABLES
    (185) expr13 -> . array
    (187) uexpr -> . none
    (188) uexpr -> . PLUS
    (189) uexpr -> . MINUS
    (190) uexpr -> . BITNOT
    (191) uexpr -> . BITCOMP
    (198) none -> .

    VARIABLES       shift and go to state 28
    CONSTANTS       shift and go to state 22
    KEYWORD_def     shift and go to state 21
    KEYWORD_class   shift and go to state 39
    KEYWORD_if      shift and go to state 27
    KEYWORD_while   shift and go to state 4
    KEYWORD_begin   shift and go to state 38
    KEYWORD_until   shift and go to state 25
    KEYWORD_for     shift and go to state 52
    KEYWORD_puts    shift and go to state 33
    KEYWORD_break   shift and go to state 48
    KEYWORD_next    shift and go to state 12
    KEYWORD_redo    shift and go to state 1
    KEYWORD_exit    shift and go to state 23
    BOOLEAN_CONSTANTS shift and go to state 11
    OPEN_PAREN      shift and go to state 30
    PLUS            shift and go to state 6
    MINUS           shift and go to state 3
    BITNOT          shift and go to state 40
    BITCOMP         shift and go to state 29
    INT_CONSTANTS   reduce using rule 198 (none -> .)
    FLOAT_CONSTANTS reduce using rule 198 (none -> .)

    statements                     shift and go to state 24
    mlhs                           shift and go to state 2
    func_defn                      shift and go to state 37
    puts_stmt                      shift and go to state 18
    expr11                         shift and go to state 15
    expr13                         shift and go to state 16
    top_stmts                      shift and go to state 17
    array                          shift and go to state 26
    expr3                          shift and go to state 41
    program                        shift and go to state 5
    expr6                          shift and go to state 43
    fname                          shift and go to state 44
    expr5                          shift and go to state 45
    func_call_stmt                 shift and go to state 32
    expr7                          shift and go to state 7
    expr8                          shift and go to state 46
    expr9                          shift and go to state 47
    expr4                          shift and go to state 8
    statement                      shift and go to state 31
    exit_stmt                      shift and go to state 49
    top_compstmt                   shift and go to state 19
    MLHS                           shift and go to state 50
    stmt                           shift and go to state 20
    loop_stmt                      shift and go to state 9
    uexpr                          shift and go to state 10
    none                           shift and go to state 34
    expr                           shift and go to state 35
    top_top_compstmt               shift and go to state 51
    class_defn                     shift and go to state 36
    expr10                         shift and go to state 14
    expr1                          shift and go to state 42
    top_stmt                       shift and go to state 13

state 1

    (91) loop_stmt -> KEYWORD_redo .

    KEYWORD_while   reduce using rule 91 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_until   reduce using rule 91 (loop_stmt -> KEYWORD_redo .)
    DELIM           reduce using rule 91 (loop_stmt -> KEYWORD_redo .)
    newline         reduce using rule 91 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_end     reduce using rule 91 (loop_stmt -> KEYWORD_redo .)
    $end            reduce using rule 91 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_elsif   reduce using rule 91 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_else    reduce using rule 91 (loop_stmt -> KEYWORD_redo .)


state 2

    (125) MLHS -> mlhs .

    EQUAL           reduce using rule 125 (MLHS -> mlhs .)
    COMMA           reduce using rule 125 (MLHS -> mlhs .)


state 3

    (189) uexpr -> MINUS .

    INT_CONSTANTS   reduce using rule 189 (uexpr -> MINUS .)
    FLOAT_CONSTANTS reduce using rule 189 (uexpr -> MINUS .)


state 4

    (68) top_stmt -> KEYWORD_while . expr3 opt_do gen_stmts opt_terms KEYWORD_end
    (152) expr3 -> . expr3 LOGICALOR expr4
    (153) expr3 -> . expr4
    (154) expr4 -> . expr4 LOGICALAND expr5
    (155) expr4 -> . expr5
    (156) expr5 -> . expr6 DOUBLEEQUAL expr6
    (157) expr5 -> . expr6 NOTEQUAL expr6
    (158) expr5 -> . expr6
    (159) expr6 -> . expr7 LESSEQUAL expr7
    (160) expr6 -> . expr7 LESS expr7
    (161) expr6 -> . expr7 GREATER expr7
    (162) expr6 -> . expr7 GREATEREQUAL expr7
    (163) expr6 -> . expr7
    (164) expr6 -> . BOOLEAN_CONSTANTS
    (165) expr7 -> . expr7 BITXOR expr8
    (166) expr7 -> . expr7 PIPE expr8
    (167) expr7 -> . expr8
    (168) expr8 -> . expr8 BITAND expr9
    (169) expr8 -> . expr9
    (170) expr9 -> . expr9 SHIFTL expr10
    (171) expr9 -> . expr9 SHIFTR expr10
    (172) expr9 -> . expr10
    (173) expr10 -> . expr10 PLUS expr11
    (174) expr10 -> . expr10 MINUS expr11
    (175) expr10 -> . expr11
    (176) expr11 -> . expr11 MULTIPLY expr13
    (177) expr11 -> . expr11 DIV expr13
    (178) expr11 -> . expr11 MOD expr13
    (179) expr11 -> . expr13
    (180) expr13 -> . OPEN_PAREN expr1 CLOSE_PAREN
    (181) expr13 -> . uexpr INT_CONSTANTS
    (182) expr13 -> . uexpr FLOAT_CONSTANTS
    (183) expr13 -> . CONSTANTS
    (184) expr13 -> . VARIABLES
    (185) expr13 -> . array
    (187) uexpr -> . none
    (188) uexpr -> . PLUS
    (189) uexpr -> . MINUS
    (190) uexpr -> . BITNOT
    (191) uexpr -> . BITCOMP
    (186) array -> . VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
    (198) none -> .

    BOOLEAN_CONSTANTS shift and go to state 11
    OPEN_PAREN      shift and go to state 30
    CONSTANTS       shift and go to state 56
    VARIABLES       shift and go to state 53
    PLUS            shift and go to state 6
    MINUS           shift and go to state 3
    BITNOT          shift and go to state 40
    BITCOMP         shift and go to state 29
    INT_CONSTANTS   reduce using rule 198 (none -> .)
    FLOAT_CONSTANTS reduce using rule 198 (none -> .)

    uexpr                          shift and go to state 10
    none                           shift and go to state 34
    expr13                         shift and go to state 16
    expr9                          shift and go to state 47
    expr3                          shift and go to state 54
    expr6                          shift and go to state 43
    expr7                          shift and go to state 7
    expr4                          shift and go to state 8
    expr5                          shift and go to state 45
    expr10                         shift and go to state 14
    expr8                          shift and go to state 46
    array                          shift and go to state 55
    expr11                         shift and go to state 15

state 5

    (0) S' -> program .



state 6

    (188) uexpr -> PLUS .

    INT_CONSTANTS   reduce using rule 188 (uexpr -> PLUS .)
    FLOAT_CONSTANTS reduce using rule 188 (uexpr -> PLUS .)


state 7

    (159) expr6 -> expr7 . LESSEQUAL expr7
    (160) expr6 -> expr7 . LESS expr7
    (161) expr6 -> expr7 . GREATER expr7
    (162) expr6 -> expr7 . GREATEREQUAL expr7
    (163) expr6 -> expr7 .
    (165) expr7 -> expr7 . BITXOR expr8
    (166) expr7 -> expr7 . PIPE expr8
